[org]update note

--- a/src/org/note/emacs_note.org
+++ b/src/org/note/emacs_note.org
@@ -41,3 +41,5 @@
    
 ** emacs默认配置读取路径                                               :app:
    linux/unix系统默认在~目录, windows下如果想要在~目录, 必须设置环境变量$HOME=~
+
+** org-mode里面未闭合的双引号("")会导致后面的全部缩进失效              :app:
