--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -36,14 +36,19 @@ SCHEDULED: <2021-07-03 周六 18:00 ++1w> DEADLINE: <2021-07-05 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-06-27 周日 19:00 ++1d>
+SCHEDULED: <2021-07-01 周四 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-06-26 周六 15:51]
+:LAST_REPEAT: [2021-06-30 周三 10:20]
 :END:
 
+- State "DONE"       from "TODO"       [2021-06-30 周三 10:20]
+- State "DONE"       from "TODO"       [2021-06-29 周二 10:24]
+- State "DONE"       from "TODO"       [2021-06-28 周一 09:39]
+- State "CALCELED"   from "TODO"       [2021-06-27 周日 19:25] \\
+  没时间
 - State "DONE"       from "TODO"       [2021-06-26 周六 15:51]
 - State "DONE"       from "TODO"       [2021-06-25 周五 09:35]
 - State "DONE"       from "TODO"       [2021-06-24 周四 09:16]
@@ -135,18 +140,22 @@ SCHEDULED: <2021-06-27 周日 19:00 ++1d>
 SCHEDULED: <2021-06-22 周二 10:00>
 - [X] 组件拆分
 - [X] 基础关卡适配
-- [ ] 特殊关卡适配 [0%]
-  - [ ] 英雄山
-  - [ ] 多队
-  - [ ] 竞技场
+- [-] 特殊关卡适配 [75%]
+  - [X] 英雄山
+  - [X] 多队
+  - [X] 竞技场
   - [ ] 配置关卡
 - [ ] 本地存储适配
-** TODO [#A] 学习《改善python程序的91个建议》                       :learn:
-SCHEDULED: <2021-06-28 周一 09:00 ++1d>
+** TODO [#A] 学习《改善python程序的91个建议》                        :learn:
+SCHEDULED: <2021-07-01 周四 09:00 ++1d>
 :PROPERTIES:
 :STYLE:    habit
 :ATTACH: [[file:~/myproject/src/org/ref/python91个建议.org][python91个建议]]
+:LAST_REPEAT: [2021-06-30 周三 10:20]
 :END:
+- State "DONE"       from "TODO"       [2021-06-30 周三 10:20]
+- State "DONE"       from "TODO"       [2021-06-29 周二 10:24]
+- State "DONE"       from "TODO"       [2021-06-28 周一 11:07]
 ** WAIT [#A] 准备转正报告                                            :work:
 SCHEDULED: <2021-06-07 周一 19:03>
 - State "WAIT"       from "TODO"       [2021-06-26 周六 15:54] \\
