--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -190,13 +190,23 @@ DEADLINE: <2021-07-04 周日 23:00 ++1w> SCHEDULED: <2021-07-03 周六 18:00 ++1
   ------------------------------------------------
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
-** TODO [#A] 每月归档到年度文件                                      :event:
-DEADLINE: <2021-06-30 Wed 23:00 ++1m> SCHEDULED: <2021-06-30 Wed 09:00 ++1m>
+** TODO [#A] 每月归档到年度文件                                     :event:
+DEADLINE: <2021-07-30 周五 23:00 ++1m> SCHEDULED: <2021-07-30 周五 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-05-30 Sun 09:26]
+:LAST_REPEAT: [2021-07-01 周四 00:59]
 :END:
+- State "DONE"       from "TODO"       [2021-06-30 周三 22:59] \\
+  入职以后的第三个月, 完成了转正, 工作上主要完成了:
+  1. 完成了临时组队功能
+  2. 完成了三队战斗功能(单人模式, 英雄山模式)
+  3. 完成了战斗模型的解耦重构
+  4. 完成了季度报告和转正报告
+  5. 完成了游戏编程模式的学习, 开始学习python的91个建议
+  生活上:
+  1. 办理电信宽带
+  2. 购买电脑配件并装机
 - State "DONE"       from "TODO"       [2021-05-30 Sun 09:26] \\
   入职之后的第二个月, 正式开始进入工作, 工作上主要完成:
   1. 完成了m8英雄山基本功能的设计与实现(mvc)
@@ -212,54 +222,6 @@ DEADLINE: <2021-06-30 Wed 23:00 ++1m> SCHEDULED: <2021-06-30 Wed 09:00 ++1m>
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 装机 [100%]                                           :event:
-CLOSED: [2021-06-20 周日 09:25] SCHEDULED: <2021-06-20 周日 09:10>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-06-20 周日 09:43
-:END:
-- State "DONE"       from "TODO"       [2021-06-20 周日 16:25]
-1. [X] 装备主板
-   - [X] 安装cpu
-   - [X] 安装内存
-   - [X] 安装m.2固态硬盘
-2. [X] 安装主板
-   - [X] 拆开机箱
-   - [X] 查看好机箱底部螺丝柱, 确保对应后, 将主板安装到机箱上
-3. [X] 装配散热
-   - [X] 将水冷风扇装到冷排上(入风)
-   - [X] 将冷排固定到机箱前侧
-   - [X] 在cpu上涂抹硅脂, 将冷头盖到cpu上并固定
-   - [X] 安装顶部风扇和背部风扇(出风)
-4. [X] 装配电源
-   - [X] 将需要好的线缆(主板供电, cpu供电, gpu供电, sata供电等)装到电源上
-   - [X] 将电源固定到机箱上
-5. [X] 安装sata硬盘
-6. [X] 接驳线缆
-   - [X] 主板供电
-   - [X] cpu供电
-   - [X] 开机跳线
-   - [X] 机箱sata供电
-   - [X] 水冷供电
-   - [X] 风扇供电
-   - [X] 机箱和风扇rgb
-   - [X] 电源rgb
-   - [X] usb3.0和usb2.0
-   - [X] sata数据线
-   - [X] 音频跳线
-7. [X] 安装显卡并接线固定
-8. [X] 将拆下的机箱部件安装回去, 完成
-*** DONE [#A] 补齐缺失物品 [5/5]                                 :shopping:
-CLOSED: [2021-06-21 周一 17:33] SCHEDULED: <2021-06-21 Tue 09:39>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-06-27 周日 10:12
-:END:
-- State "DONE"       from "TODO"       [2021-06-21 周一 17:33]
-- [X] 鼠标防滑贴
-- [X] 硅脂
-- [X] 5v-rgb分线器
-- [X] 键帽
-- [X] 胶带
 * Appointment
 ** TODO 手机号码切换                                                :event:
 SCHEDULED: <2021-06-12 周六 09:00>
@@ -281,56 +243,5 @@ SCHEDULED: <2021-06-12 周六 09:00>
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
-** Archive                                                        :ARCHIVE:
-*** DONE 处理宽带光衰问题                                            :date:
-CLOSED: [2021-06-11 周五 20:10]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-06-13 周日 17:37
-:END:
-- State "DONE"       from "TODO"       [2021-06-11 周五 17:10]
-<2021-06-12 Sat 09:00>--<2021-06-13 Sun 21:00>
-*** DONE 办理电信宽带业务                                           :event:
-CLOSED: [2021-06-07 Mon 20:17] SCHEDULED: <2021-04-10 周六 13:20>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-06-13 周日 17:37
-:END:
-- State "DONE"       from "TODO"       [2021-06-07 Mon 20:17] \\
-  129每月, 下行300上行，下行40
-- State "WAIT"       from "TODO"       [2021-04-10 周六 13:36] \\
-  暂时没需求.
-*** DONE 组装一台性价比高的台式机用于开发和娱乐                  :shopping:
-CLOSED: [2021-06-18 周五 09:29]
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-06-20 周日 09:43
-:END:
-- State "DONE"       from "TODO"       [2021-06-18 周五 09:29] \\
-  1. 最终还是下定决心, 在618进行一个电脑的买, 显卡忒贵了, 只能二手先顶顶了
-  2. 如果不是缺货, 一定要最后一天(618)在买, 切记, 每个都能便宜点
-<2021-06-01 周二>--<2021-06-30 周三>
-- State "WAIT"       from "TODO"       [2021-04-10 周六 14:03] \\
-  1. 显卡太贵
-  2. 没钱
-#+CAPTION[零件表]:
-#+NAME: PC_PRICES
-| component   | brand    | model                | price | lowest | diff | date |
-|-------------+----------+----------------------+-------+--------+------+------|
-| motherboard | ASUS-ROG | STRIX B550-F GAMING  |  1384 |   1429 |  -45 | 6.18 |
-| cpu         | AMD      | Ryzen9-5900X         |  3694 |   3649 |   45 | 6.18 |
-| memory      | G.SKILL  | TridentZ-neo(16GB*2) |  1549 |   1349 |  200 | 6.18 |
-| ssd(sys)    | SAMSUNG  | 980-Pro(256GB)       |   499 |    449 |   50 | 6.16 |
-| ssd(app)    | SAMSUNG  | 980(1TB)             |   993 |    939 |   54 | 6.16 |
-| hdd(data)   | TOSHIBA  | P300(1TB)            |   269 |    241 |   28 | 6.19 |
-| gpu         | MSI      | RTX-1063(second-h)   |  1114 |   1039 |   75 | 6.18 |
-| power       | ASUS-ROG | THOR-850             |  1689 |   1689 |    0 | 6.18 |
-| case        | PHANTEKS | P500A                |   559 |    399 |  160 | 6.15 |
-| Fan         | PHANTEKS | Halos(14*1, 12*3)    |   360 |    280 |   80 | 6.16 |
-| watercool   | NZXT     | Kraken-Z73           |  1693 |   1679 |   14 | 6.15 |
-| Monitor     | MSI      | MAG274QRF-QD         |  1949 |   1879 |   70 | 6.16 |
-| keyboard    | DURGOD   | K320w(silver)        |   616 |    629 |  -13 | 6.16 |
-| earphone    | KINGSTON | HyperX-Cloud-Flight  |   596 |    559 |   37 | 6.16 |
-| mouse       | LOGITECH | PRO-WIRELESS         |   596 |    599 |   -3 | 6.16 |
-|             |          |                      | 17560 |  16808 |  752 |      |
-#+Tblfm: $6=$4-$5::@17$4=vsum(+@I..@-1)::@17$5=vsum(+@I..@-1)
-可能还需要线缆收纳, 硅脂, 防静电手环等设备
 * Project
 * Someday
