--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -138,16 +138,19 @@ SCHEDULED: <2021-07-02 周五 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 优化战斗模型层 [2/4]                                 :work:m8:
-SCHEDULED: <2021-06-22 周二 10:00>
+** DONE [#A] 优化战斗模型层 [6/6]                                 :work:m8:
+CLOSED: [2021-07-02 周五 20:53] SCHEDULED: <2021-06-22 周二 10:00>
+- State "DONE"       from "TODO"       [2021-07-02 周五 20:53]
 - [X] 组件拆分
 - [X] 基础关卡适配
-- [-] 特殊关卡适配 [75%]
+- [X] 特殊关卡适配 [100%]
   - [X] 英雄山
   - [X] 多队
   - [X] 竞技场
-  - [ ] 配置关卡
-- [ ] 本地存储适配
+  - [X] 配置关卡
+- [X] 本地存储适配
+- [X] 调用处修改
+- [X] 总结
 ** TODO [#A] 学习《改善python程序的91个建议》                       :learn:
 SCHEDULED: <2021-07-02 周五 09:00 ++1d>
 :PROPERTIES:
