[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -27,12 +27,31 @@ DEADLINE: <2021-07-12 周一 23:00 +1m> SCHEDULED: <2021-07-12 周一 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-07-04 周日 23:00 ++1w> SCHEDULED: <2021-07-03 周六 18:00 ++1w>
+DEADLINE: <2021-07-11 周日 23:00 ++1w> SCHEDULED: <2021-07-10 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-06-26 周六 15:58]
+:LAST_REPEAT: [2021-07-03 周六 17:19]
 :END:
+- State "DONE"       from "TODO"       [2021-07-03 周六 17:19] \\
+  1. 继续完成上周未完成的组件实现工作 [100%]
+     - [X] 三队战斗组件实现
+     - [X] 英雄山组件实现
+     - [X] 竞技场组件实现
+     - [X] 配置关卡组件实现
+  2. 调整所有调用战斗模型接口的调用代码
+  3. 新的本地文件模型
+     - 按照每个关卡根据关卡id各自存储自己的配置, 配置关卡, 测试关卡属于此类
+     - 所有3v3共享一套阵容, 5v5同理, 英雄山, 主线属于此类, 这种一般用于线性关卡
+  4. 文档输出, 新战斗模块讲解以及扩展教程
+  5. 完成了《python91建议》前30章的阅读
+  ------------------------------------------------
+  1. 电脑的前置usb的两个接口中有一个无效, 已经破案了, 就是它的机箱线缆坏了,
+     商家新发的线在废了九牛二虎之力安装之后一切正常了
+  2. 音响和皮卡丘魔法插座已经安排上了
+  ------------------------------------------------
+  1. 这个主机拆来拆去有点烦, 不过应该已经差不多搞定了
+  2. bios开了pbo感觉没什么提升, 是我的错觉吗
 - State "DONE"       from "TODO"       [2021-06-26 周六 15:58] \\
   1. 本周主要的工作为重构战场模型, 主要完成了以下几点:
      * 完成了对新的战场模型的设计
@@ -45,7 +64,7 @@ DEADLINE: <2021-07-04 周日 23:00 ++1w> SCHEDULED: <2021-07-03 周六 18:00 ++1
        这5个组件提供了不完整的默认实现, 子类通过继承和注册, 可以根据玩法类型动态创
        建每个玩法需要的组件对象. 通过拼接自己玩法的5个组件可以实现在不影响其他玩法
        的情况下增加新的玩法, 实现了解耦.
-     * 实现进度 [37%]
+     * 实现进度 [42%]
        - [X] 基础组件类和战场模型
        - [X] 基础关卡组件实现
        - [X] 不影响当前游戏的新组件适配代码
