[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -48,7 +48,7 @@ DEADLINE: <2021-07-11 周日 23:00 ++1w> SCHEDULED: <2021-07-10 周六 18:00 ++1
   ------------------------------------------------
   1. 电脑的前置usb的两个接口中有一个无效, 已经破案了, 就是它的机箱线缆坏了,
      商家新发的线在废了九牛二虎之力安装之后一切正常了
-  2. 音响和皮卡丘魔法插座已经安排上了
+  2. 音响, rgb显卡支架和皮卡丘魔方插座已经安排上了
   ------------------------------------------------
   1. 这个主机拆来拆去有点烦, 不过应该已经差不多搞定了
   2. bios开了pbo感觉没什么提升, 是我的错觉吗
@@ -242,8 +242,13 @@ DEADLINE: <2021-07-30 周五 23:00 ++1m> SCHEDULED: <2021-07-30 周五 09:00 ++1
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
 * Appointment
-** TODO 手机号码切换                                                :event:
+** TODO 购买xbox精英二代手柄                                     :shopping:
+<2021-11-01 周一 09:00>
+注意手柄的A键不灵敏, 回弹慢, 连续点击后断触问题
+** WAIT 手机号码切换                                                :event:
 SCHEDULED: <2021-06-12 周六 09:00>
+- State "WAIT"       from "TODO"       [2021-07-05 周一 09:05] \\
+  懒得搞了
 - [ ] 切换手机号绑定(18516114761\rightarrow19128277021 [0%]
   - [ ] 微信
   - [ ] 支付宝
@@ -256,9 +261,6 @@ SCHEDULED: <2021-06-12 周六 09:00>
   - [ ] QQ
   - [ ] Steam
 - [ ] 联通手机号停机
-** TODO 购买xbox精英二代手柄                                     :shopping:
-<2021-11-01 周一 09:00>
-注意手柄的A键不灵敏, 回弹慢, 连续点击后断触问题
 ** WAIT 爬火炉山                                                     :event:
 - State "WAIT"       from "TODO"       [2021-04-11 周日 16:29] \\
   和同事商量一下一起去, 先不急.
