--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -37,15 +37,19 @@ SCHEDULED: <2021-07-10 周六 18:00 ++1w> DEADLINE: <2021-07-12 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-07-02 周五 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                    :learn:
+SCHEDULED: <2021-07-08 周四 19:00 +1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-07-01 周四 20:55]
+:LAST_REPEAT: [2021-07-07 周三 17:29]
 :END:
 
+- State "DONE"       from "TODO"       [2021-07-07 周三 17:29] \\
+  学到了一个很新颖的思路, n个队伍比赛在每个队伍失败一次就淘汰的情况下最多打几场,
+  答案是n-1场, 因为最后只有一个队伍获胜
+- State "DONE"       from "TODO"       [2021-07-05 周一 16:09]
 - State "CANCELED"   from "TODO"       [2021-07-01 周四 20:55] \\
   没时间
 - State "DONE"       from "TODO"       [2021-06-30 周三 10:20]
@@ -141,18 +145,23 @@ SCHEDULED: <2021-07-02 周五 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#A] 学习《改善python程序的91个建议》                       :learn:
-SCHEDULED: <2021-07-04 周日 09:00 ++1d>
+SCHEDULED: <2021-07-08 周四 09:00 ++1d>
 :PROPERTIES:
 :STYLE:    habit
 :ATTACH: [[file:~/myproject/src/org/ref/python91个建议.org][python91个建议]]
-:LAST_REPEAT: [2021-07-03 周六 16:40]
+:LAST_REPEAT: [2021-07-07 周三 20:22]
 :END:
+- State "DONE"       from "TODO"       [2021-07-07 周三 20:22]
+- State "DONE"       from "TODO"       [2021-07-05 周一 12:34]
 - State "DONE"       from "TODO"       [2021-07-03 周六 16:40]
 - State "DONE"       from "TODO"       [2021-07-03 周六 16:40]
 - State "DONE"       from "TODO"       [2021-07-01 周四 20:55]
 - State "DONE"       from "TODO"       [2021-06-30 周三 10:20]
 - State "DONE"       from "TODO"       [2021-06-29 周二 10:24]
 - State "DONE"       from "TODO"       [2021-06-28 周一 11:07]
+** DONE [#A] 处理增加删除GM指令bug                                     :m8:
+CLOSED: [2021-07-05 周一 15:37] SCHEDULED: <2021-07-05 周一 13:30>
+- State "DONE"       from "TODO"       [2021-07-05 周一 15:37]
 ** WAIT [#A] 准备转正报告                                            :work:
 SCHEDULED: <2021-06-07 周一 19:03>
 - State "WAIT"       from "TODO"       [2021-06-26 周六 15:54] \\
@@ -176,6 +185,36 @@ CLOSED: [2021-07-02 周五 20:53] SCHEDULED: <2021-06-22 周二 10:00>
 - [X] 总结
 * Appointment
 * Project
+** DONE [#A] 英雄山关卡坐标和关卡分组                              :work:m8:
+CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-05 周一 11:00> DEADLINE: <2021-07-06 周二 21:00>
+:PROPERTIES:
+:BLOCKER:  children
+:END:                          
+- State "DONE"       from "SCH"        [2021-07-07 周三 17:29]
+*** DONE 追加导表字段
+CLOSED: [2021-07-05 周一 20:23] SCHEDULED: <2021-07-05 周一 11:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+- State "DONE"       from "TODO"       [2021-07-05 周一 20:23]
+*** DONE 实现UI文件
+CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-05 周一 20:23>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-07-07 周三 17:29]
+*** DONE 实现坐标分配功能
+CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-07 周三 17:29>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-07-07 周三 17:29]
+*** DONE 实现关卡分组功能
+CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-07 周三 17:29>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
 * Someday
 ** 学习《代码之外的生存指南》                                :learn:future:
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
