[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -27,12 +27,30 @@ DEADLINE: <2021-07-12 周一 23:00 +1m> SCHEDULED: <2021-07-12 周一 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-07-11 周日 23:00 ++1w> SCHEDULED: <2021-07-10 周六 18:00 ++1w>
+DEADLINE: <2021-07-18 周日 23:00 ++1w> SCHEDULED: <2021-07-17 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-07-03 周六 17:19]
+:LAST_REPEAT: [2021-07-10 周六 16:39]
 :END:
+- State "DONE"       from "TODO"       [2021-07-10 周六 16:39] \\
+  1. 完成了添加/删除英雄时在英雄界面的信号处理, 不过目前存在以下问题:
+     - 当英雄过多之后, 每一次追加新英雄都会导致严重的卡顿
+     - 英雄过多后, 打开英雄界面也会有非常严重的卡顿
+     - 使用gm指令增加的英雄没有按顺序插入
+  2. 完成了英雄山组队章节按进度刷新, 按赛季随机选择位置的工单
+     - 新增英雄山章节的两个可配置子表
+     - 将以前的数据控件配置坐标改为创建章节ui文件设置, 可视化和编辑更加方便
+     - 现在英雄山组队章节会按照进度在地图上刷出, 每次刷出时在若干个随机位置刷新章节
+       入口图标, 但是每个赛季随机的结果必须保持一致, 目前采用random.seed(x)实现
+       进度阈值和刷新数量均由导表控制
+  3. 完成了《python91建议》30章-60章的阅读
+  ------------------------------------------------
+  1. muse dash, 第一次玩音游感觉还不错, 8分
+  2. braid, 大结局的倒带还是很有新意的, 谜题设计很巧妙, 找星星不看攻略我是想不到的, 9分
+  3. 漫野奇谭通关, 和为了吾王很像, 魔法系统念合很有趣, 8分
+  ------------------------------------------------
+  1. 这周食堂恢复正常了, 单人人也太多了吧, 麻了麻了
 - State "DONE"       from "TODO"       [2021-07-03 周六 17:19] \\
   1. 继续完成上周未完成的组件实现工作 [100%]
      - [X] 三队战斗组件实现
@@ -64,14 +82,10 @@ DEADLINE: <2021-07-11 周日 23:00 ++1w> SCHEDULED: <2021-07-10 周六 18:00 ++1
        这5个组件提供了不完整的默认实现, 子类通过继承和注册, 可以根据玩法类型动态创
        建每个玩法需要的组件对象. 通过拼接自己玩法的5个组件可以实现在不影响其他玩法
        的情况下增加新的玩法, 实现了解耦.
-     * 实现进度 [42%]
+     * 实现进度 [100%]
        - [X] 基础组件类和战场模型
        - [X] 基础关卡组件实现
        - [X] 不影响当前游戏的新组件适配代码
-       - [ ] 三队战斗组件实现
-       - [ ] 英雄山组件实现
-       - [ ] 竞技场组件实现
-       - [ ] 配置关卡组件实现
   ------------------------------------------------
   1. 正式转正, 好耶. 而且没开让人尴尬的转正报告会议(主要是阐述核心价值观有点尬)
   2. 因为转正, 所以每日日报也不需要在写了, 好耶
